src/test/resources/type/bad/double-call-infer-function.fika
x = 3
y = 3.5

func hello(a,b){
return a + b
}

hello(x,x)
hello(x,y)

